--- a/android/src/main/res/layout/view_home_page.xml
+++ b/android/src/main/res/layout/view_home_page.xml
@@ -15,6 +15,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+            android:elevation="0dp"
             android:background="@android:color/transparent">
 
             <com.google.android.material.appbar.CollapsingToolbarLayout
